kubernetes/dev/dm-poc-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dm-poc-app

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dm-poc-app
  namespace: dm-poc-app
spec:
  selector:
    matchLabels:
      name: dm-poc-app
  template:
    metadata:
      labels:
        name: dm-poc-app
    spec:
      containers:
      - name: app
        # image: phelun/dm-app-1:0.1
        image: europe-west1-docker.pkg.dev/dm-poc-development/dm-poc-development-image-reg/dm-team-frontend-svc:7c34fa3b55118f03c36eb90a349664081d68450d
        ports:
          - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: dm-poc-app
  namespace: dm-poc-app
spec:
  type: NodePort
  ports:
    - port: 80
      targetPort: 8080
  selector:
    name: dm-poc-app

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dm-poc-app
  namespace: dm-poc-app
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: dm-poc-app
            port:
              number: 80
